# anomaly-detection-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
data/: generate_data_readme.txt  sample_sensor_data.csv
scripts/: generate_sample_data.py
src/: __init__.py  app.py  data_generator.py  detector.py
tests/: test_detector.py
